force-app/main/default/objects/CRN_Number__c/CRN_Number__c.object-meta.xml
<CustomObject>
    <label>CRN Number</label>
    <nameField>
        <displayFormat>CRN-{0000}</displayFormat>
        <label>CRN Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRN Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>