force-app/main/default/objects/CRN_Number__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>CRN Numbers</relationshipLabel>
    <relationshipName>CRN_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>