force-app/main/default/objects/CRN_Number__c/fields/CRN_Utilize__c.field-meta.xml
<CustomField>
    <fullName>CRN_Utilize__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will show that CRN Number is utilized or not.</description>
    <label>CRN Utilize</label>
    <type>Checkbox</type>
</CustomField>