force-app/main/default/objects/CRN_Number__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>