force-app/main/default/objects/CRN_Number__c/listViews/Used_CRN_Numbers.listView-meta.xml
<ListView>
    <fullName>Used_CRN_Numbers</fullName>
    <columns>Number__c</columns>
    <columns>CRN_Utilize__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRN_Utilize__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Used CRN Numbers</label>
</ListView>